# consult-llm-mcp

./: .gitignore  .npmignore  .oxfmtrc.json  .prettierignore  .workmux.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  biome.json  build.rs  eslint.config.js  justfile  package-lock.json  package.json  run.sh  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: jsonl.rs  lib.rs  llm_cost.rs  monitoring.rs  path_migrate.rs  paths.rs  stream_events.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: action.rs  app.rs  format.rs  input.rs  main.rs  meta.rs  poller.rs  polling.rs  state.rs
crates/monitor/src/app/: detail_load.rs  mod.rs  poll.rs
crates/monitor/src/ui/: detail.rs  markdown.rs  mod.rs  table.rs
crates/monitor/src/ui/detail/: blocks.rs  mod.rs  run_view.rs  thread_view.rs
crates/monitor/src/ui/markdown/: highlight.rs  mod.rs  wrap.rs
examples/: consult.md
scripts/: generate-version  install-skills  install.sh  publish  test-monitor  test-monitor.sh
skills/collab/: SKILL.md
skills/collab-vs/: SKILL.md
skills/consult/: SKILL.md
skills/consult-llm/: SKILL.md
skills/debate/: SKILL.md
skills/debate-vs/: SKILL.md
skills/implement/: SKILL.md
skills/panel/: SKILL.md
skills/phased-implement/: SKILL.md
skills/review/: SKILL.md
skills/review-panel/: SKILL.md
skills/workshop/: SKILL.md
src/: catalog.rs  clipboard.rs  clipboard.ts  config.rs  config.test.ts  config.ts  config_discovery.rs  config_file.rs  config_loader.rs  errors.rs  external-dirs.test.ts  external-dirs.ts  external_dirs.rs  file.rs  file.ts  git-worktree.test.ts  git-worktree.ts  git.rs  git.test.ts  git.ts  git_worktree.rs  group_thread_store.rs  llm-cost.ts  llm-query.ts  llm.rs  llm.test.ts  llm.ts  llm_cost.rs  llm_query.rs  logger.rs  logger.ts  logging_reader.rs  main.rs  main.test.ts  main.ts  mcp-server.ts  models.rs  models.ts  monitoring.rs  paths.rs  (+14 more)
src/cli/: input.rs  mod.rs  output.rs  run.rs  run_spec.rs  tests.rs
src/cli/commands/: config.rs  docs.rs  doctor.rs  init_config.rs  init_prompt.rs  install_skills.rs  mod.rs  models.rs  update.rs
src/config/: discovery.rs  file.rs  loader.rs  migrate.rs  mod.rs  parse.rs  types.rs
src/config/parse/: defaults.rs  env.rs  mod.rs  provider.rs  registry.rs
src/executors/: agent-cli.ts  anthropic_api.rs  anthropic_events.rs  api.rs  api.ts  api_chat.rs  api_common.rs  api_transport.rs  child_guard.rs  cli-runner.ts  cli_runner.rs  codex-cli.ts  codex_cli.rs  cursor-cli.ts  cursor_cli.rs  cursor_models.rs  gemini-cli.ts  gemini_cli.rs  mod.rs  opencode_cli.rs  sse.rs  stream.rs  tag_splitter.rs  thread_store.rs  types.rs  types.ts
src/service/: group.rs  mod.rs  plan.rs  runner.rs  tests.rs
