[workspace]
members = [".", "crates/core", "crates/monitor"]

[workspace.package]
version = "3.0.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/raine/consult-llm"
homepage = "https://github.com/raine/consult-llm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "fs", "signal", "time"] }
anyhow = "1"

[package]
name = "consult-llm"
version.workspace = true
edition.workspace = true
description = "CLI for consulting stronger LLMs from your agent workflow"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "ai", "cli", "agent"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
consult-llm-core = { path = "crates/core", version = "3" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
eventsource-stream = "0.2"
async-trait = "0.1"
thiserror = "2"
anyhow = { workspace = true }
dirs = { workspace = true }
arboard = "3"
chrono = { workspace = true }
pathdiff = "0.2"
uuid = { workspace = true }
smallvec = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }
shlex = "1"
fs2 = "0.4"

[[bin]]
name = "consult-llm"
path = "src/main.rs"

[profile.release]
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "test-util"] }
