[workspace]
members = [".", "crates/core", "crates/monitor"]

[workspace.package]
version = "3.0.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/raine/consult-llm"
homepage = "https://github.com/raine/consult-llm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2"
anyhow = "1"

[package]
name = "consult-llm"
version.workspace = true
edition.workspace = true
description = "CLI for consulting stronger LLMs from your agent workflow"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["llm", "ai", "cli", "agent"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
consult-llm-core = { path = "crates/core", version = "3" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
ctrlc = "3"
libc = { workspace = true }
thiserror = "2"
anyhow = { workspace = true }
dirs = { workspace = true }
arboard = "3"
chrono = { workspace = true }
pathdiff = "0.2"
uuid = { workspace = true }
smallvec = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }
shlex = "1"
fs2 = "0.4"

[[bin]]
name = "consult-llm"
path = "src/main.rs"

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3"
