[package]
name = "consult-llm-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
