[package]
name = "consult-llm-core"
version.workspace = true
edition.workspace = true
description = "Core library for consult-llm"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
