[package]
name = "consult-llm-monitor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "consult-llm-monitor"
path = "src/main.rs"

[dependencies]
consult-llm-core = { path = "../core" }
ratatui = "0.30"
crossterm = "0.29"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arboard = "3"
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
